--- a/BulletHell-Engine/BulletHell-Engine.vcxproj
+++ b/BulletHell-Engine/BulletHell-Engine.vcxproj
@@ -71,12 +71,14 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-SFML;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-1.89.6;C:\Users\erikf\dev\LIBRARIES\SFML\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-sfml-master;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking;C:\Users\erikf\dev\LIBRARIES\SFML\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.19041.0\um\x64;C:\Users\erikf\dev\LIBRARIES\SFML\bin;C:\Users\erikf\dev\LIBRARIES\SFML\lib;$(LibraryPath)</LibraryPath>
+    <SourcePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\ImGui;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-SFML;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-1.89.6;C:\Users\erikf\dev\LIBRARIES\SFML\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-sfml-master;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking;C:\Users\erikf\dev\LIBRARIES\SFML\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.19041.0\um\x64;C:\Users\erikf\dev\LIBRARIES\SFML\bin;C:\Users\erikf\dev\LIBRARIES\SFML\lib;$(LibraryPath)</LibraryPath>
+    <SourcePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\ImGui;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -139,14 +141,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\dev\LIBRARIES\imgui-1.89.6\imgui-1.89.6\imgui_demo.cpp" />
+    <ClCompile Include="..\..\..\..\dev\LIBRARIES\imgui-1.89.6\imgui-docking\imgui.cpp" />
+    <ClCompile Include="..\..\..\..\dev\LIBRARIES\imgui-1.89.6\imgui-docking\imgui_demo.cpp" />
+    <ClCompile Include="..\..\..\..\dev\LIBRARIES\imgui-1.89.6\imgui-docking\imgui_draw.cpp" />
+    <ClCompile Include="..\..\..\..\dev\LIBRARIES\imgui-1.89.6\imgui-docking\imgui_tables.cpp" />
+    <ClCompile Include="..\..\..\..\dev\LIBRARIES\imgui-1.89.6\imgui-docking\imgui_widgets.cpp" />
+    <ClCompile Include="..\..\..\..\dev\LIBRARIES\imgui-sfml-master\imgui-SFML.cpp" />
     <ClCompile Include="src\Game.cpp" />
-    <ClCompile Include="src\ImGui\imgui-SFML.cpp" />
-    <ClCompile Include="src\ImGui\imgui.cpp" />
-    <ClCompile Include="src\ImGui\imgui_draw.cpp" />
-    <ClCompile Include="src\ImGui\imgui_tables.cpp" />
-    <ClCompile Include="src\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Menus\EditorHandler.cpp" />
     <ClCompile Include="src\Systems\PlayerMovementSystem.cpp" />
     <ClCompile Include="src\Systems\SpriteSystem.cpp" />
     <ClCompile Include="src\Systems\TransformSystem.cpp" />
@@ -155,7 +158,10 @@
     <ClInclude Include="src\include\Components\Components.hpp" />
     <ClInclude Include="src\include\Components\Registry.hpp" />
     <ClInclude Include="src\include\Game.hpp" />
+    <ClInclude Include="src\include\Menus\EditorBase.hpp" />
+    <ClInclude Include="src\include\Menus\EditorHandler.hpp" />
     <ClInclude Include="src\include\Menus\EntityEditor.hpp" />
+    <ClInclude Include="src\include\Menus\ViewportEditor.hpp" />
     <ClInclude Include="src\include\Systems\PlayerMovementSystem.hpp" />
     <ClInclude Include="src\include\Systems\SpriteSystem.hpp" />
     <ClInclude Include="src\include\Systems\TransformSystem.hpp" />
