--- a/BulletHell-Engine/imgui.ini
+++ b/BulletHell-Engine/imgui.ini
@@ -4,7 +4,24 @@ Size=400,400
 Collapsed=0
 
 [Window][Entity Editor]
-Pos=880,139
-Size=209,463
+Pos=0,19
+Size=1678,1038
 Collapsed=0
+DockId=0x00000002,0
+
+[Window][Viewport]
+Pos=1680,19
+Size=848,1038
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][SFML Window]
+Pos=0,19
+Size=2528,1038
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0x0000F93F Window=0xBAA72A08 Pos=0,19 Size=2528,1038 Split=X Selected=0xEEF06B6F
+  DockNode  ID=0x00000002 Parent=0x0000F93F SizeRef=1678,1038 Selected=0xEEF06B6F
+  DockNode  ID=0x00000003 Parent=0x0000F93F SizeRef=848,1038 CentralNode=1 Selected=0x13926F0B
 
