--- a/BulletHell-Engine/imgui.ini
+++ b/BulletHell-Engine/imgui.ini
@@ -4,24 +4,38 @@ Size=400,400
 Collapsed=0
 
 [Window][Entity Editor]
-Pos=1079,19
-Size=191,761
+Pos=2040,19
+Size=488,362
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Viewport]
 Pos=0,19
-Size=1077,761
+Size=2038,1038
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][SFML Window]
 Pos=0,19
-Size=1270,761
+Size=2528,1038
 Collapsed=0
 
+[Window][Emitter Editor]
+Pos=2040,19
+Size=488,362
+Collapsed=0
+DockId=0x00000003,1
+
+[Window][Bullet Editor]
+Pos=2040,383
+Size=488,674
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockSpace   ID=0x2586F93F Window=0xBAA72A08 Pos=0,19 Size=1270,761 Split=X Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x2586F93F SizeRef=1077,761 CentralNode=1 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0x2586F93F SizeRef=191,761 Selected=0xEEF06B6F
+DockSpace     ID=0x2586F93F Window=0xBAA72A08 Pos=0,19 Size=2528,1038 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000001 Parent=0x2586F93F SizeRef=2038,1038 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0x2586F93F SizeRef=488,1038 Split=Y Selected=0xE272566F
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=657,362 Selected=0xE272566F
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=657,674 Selected=0x8AE84113
 
