--- a/BulletHell-Engine/BulletHell-Engine.vcxproj
+++ b/BulletHell-Engine/BulletHell-Engine.vcxproj
@@ -71,12 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking\misc\cpp;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-sfml-master;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking;C:\Users\erikf\dev\LIBRARIES\SFML3\include;C:\Users\erikf\dev\LIBRARIES\magic_enum-0.9.3\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\erikf\dev\LIBRARIES\entt-3.12.2\single_include;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking\misc\cpp;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-sfml-master;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking;C:\Users\erikf\dev\LIBRARIES\SFML3\include;C:\Users\erikf\dev\LIBRARIES\magic_enum-0.9.3\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.19041.0\um\x64;C:\Users\erikf\dev\LIBRARIES\SFML3\build\bin;C:\Users\erikf\dev\LIBRARIES\SFML3\build\lib;$(LibraryPath)</LibraryPath>
     <SourcePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\ImGui;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking\misc\cpp;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-sfml-master;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking;C:\Users\erikf\dev\LIBRARIES\SFML3\include;C:\Users\erikf\dev\LIBRARIES\magic_enum-0.9.3\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\erikf\dev\LIBRARIES\entt-3.12.2\single_include;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking\misc\cpp;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-sfml-master;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking;C:\Users\erikf\dev\LIBRARIES\SFML3\include;C:\Users\erikf\dev\LIBRARIES\magic_enum-0.9.3\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.19041.0\um\x64;C:\Users\erikf\dev\LIBRARIES\SFML3\build\bin;C:\Users\erikf\dev\LIBRARIES\SFML3\build\lib;$(LibraryPath)</LibraryPath>
     <SourcePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\ImGui;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
@@ -163,7 +163,6 @@
     <ClInclude Include="src\include\BulletHandler.hpp" />
     <ClInclude Include="src\include\Components\FireTypes.hpp" />
     <ClInclude Include="src\include\Components\Components.hpp" />
-    <ClInclude Include="src\include\Components\Registry.hpp" />
     <ClInclude Include="src\include\Game.hpp" />
     <ClInclude Include="src\include\Menus\BulletEditor.hpp" />
     <ClInclude Include="src\include\Menus\EditorBase.hpp" />
