--- a/BulletHell-Engine/imgui.ini
+++ b/BulletHell-Engine/imgui.ini
@@ -4,38 +4,40 @@ Size=400,400
 Collapsed=0
 
 [Window][Entity Editor]
-Pos=482,19
-Size=788,265
+Pos=0,19
+Size=441,1038
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Viewport]
-Pos=0,19
-Size=480,761
+Pos=443,19
+Size=855,1038
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][SFML Window]
 Pos=0,19
-Size=1270,761
+Size=2528,1038
 Collapsed=0
 
 [Window][Emitter Editor]
-Pos=482,19
-Size=788,265
+Pos=1300,19
+Size=632,1038
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000001,0
 
 [Window][Bullet Editor]
-Pos=482,286
-Size=788,494
+Pos=1934,19
+Size=594,1038
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace     ID=0x2586F93F Window=0xBAA72A08 Pos=0,19 Size=1270,761 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000001 Parent=0x2586F93F SizeRef=480,1038 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000002 Parent=0x2586F93F SizeRef=788,1038 Split=Y Selected=0xE272566F
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=657,265 Selected=0xE272566F
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=657,494 Selected=0x8AE84113
+DockSpace       ID=0x2586F93F Window=0xBAA72A08 Pos=0,19 Size=2528,1038 Split=X Selected=0x13926F0B
+  DockNode      ID=0x00000003 Parent=0x2586F93F SizeRef=441,1038 Selected=0xEEF06B6F
+  DockNode      ID=0x00000004 Parent=0x2586F93F SizeRef=2085,1038 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=855,761 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1228,761 Split=X Selected=0xE272566F
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=632,1038 Selected=0xE272566F
+      DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=594,1038 Selected=0x8AE84113
 
