Sprite batching nearly fully complete. Need to create a shader to take the darkness of each pixel and apply colors depending on that.
Also need to rotate bullets so directional sprites look normal

--- a/BulletHell-Engine/BulletHell-Engine.vcxproj.filters
+++ b/BulletHell-Engine/BulletHell-Engine.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="src\Systems\BulletSystem.cpp">
       <Filter>Source Files\Systems</Filter>
     </ClCompile>
+    <ClCompile Include="src\ResourceManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\Game.hpp">
@@ -133,6 +136,12 @@
     </ClInclude>
     <ClInclude Include="src\include\Attack.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\ResourceManager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\Menus\BulletSpriteSheetEditor.hpp">
+      <Filter>Header Files\Editor Menus</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
