--- a/BulletHell-Engine/imgui.ini
+++ b/BulletHell-Engine/imgui.ini
@@ -10,34 +10,50 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Viewport]
-Pos=443,19
-Size=855,1038
+Pos=0,19
+Size=667,881
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][SFML Window]
 Pos=0,19
-Size=2528,1038
+Size=1500,1029
 Collapsed=0
 
 [Window][Emitter Editor]
-Pos=1300,19
-Size=632,1038
+Pos=669,19
+Size=512,1029
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Bullet Editor]
-Pos=1934,19
-Size=594,1038
+Pos=1183,19
+Size=317,1029
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Bullet Sprite Sheet Editor]
+Pos=0,902
+Size=667,146
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Dear ImGui Debug Log]
+Pos=706,169
+Size=602,422
+Collapsed=0
+
+[Table][0x84639349,16]
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace       ID=0x2586F93F Window=0xBAA72A08 Pos=0,19 Size=2528,1038 Split=X Selected=0x13926F0B
+DockSpace       ID=0x2586F93F Window=0xBAA72A08 Pos=0,19 Size=1500,1029 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000003 Parent=0x2586F93F SizeRef=441,1038 Selected=0xEEF06B6F
   DockNode      ID=0x00000004 Parent=0x2586F93F SizeRef=2085,1038 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=855,761 CentralNode=1 Selected=0x13926F0B
-    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1228,761 Split=X Selected=0xE272566F
-      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=632,1038 Selected=0xE272566F
-      DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=594,1038 Selected=0x8AE84113
+    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=667,761 Split=Y Selected=0x13926F0B
+      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=561,833 CentralNode=1 Selected=0x13926F0B
+      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=561,146 Selected=0xDB3BC276
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=831,761 Split=X Selected=0xE272566F
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=512,1038 Selected=0xE272566F
+      DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=317,1038 Selected=0x8AE84113
 
