--- a/BulletHell-Engine/BulletHell-Engine.vcxproj
+++ b/BulletHell-Engine/BulletHell-Engine.vcxproj
@@ -77,7 +77,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\Users\erikf\dev\LIBRARIES\entt-3.12.2\single_include;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking\misc\cpp;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\include;C:\Users\erikf\dev\LIBRARIES\imgui-sfml-master;C:\Users\erikf\dev\LIBRARIES\imgui-1.89.6\imgui-docking;C:\Users\erikf\dev\LIBRARIES\SFML3\include;C:\Users\erikf\dev\LIBRARIES\magic_enum-0.9.3\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.19041.0\um\x64;C:\Users\erikf\dev\LIBRARIES\SFML3\build\bin;C:\Users\erikf\dev\LIBRARIES\SFML3\build\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.19041.0\um\x64;C:\Users\erikf\dev\LIBRARIES\SFML3\build\bin;C:\Users\erikf\dev\LIBRARIES\SFML3\extlibs\libs-msvc-universal\x64;C:\Users\erikf\dev\LIBRARIES\SFML3\build\lib;$(LibraryPath)</LibraryPath>
     <SourcePath>C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src\ImGui;C:\Users\erikf\source\repos\BulletHell-Engine\BulletHell-Engine\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -119,7 +119,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;%(AdditionalDependencies);OpenGL32.lib</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;%(AdditionalDependencies);opengl32.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.19041.0\um\x64;C:\Users\erikf\dev\LIBRARIES\SFML3\build\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -152,6 +153,7 @@
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Menus\EditorHandler.cpp" />
+    <ClCompile Include="src\ResourceManager.cpp" />
     <ClCompile Include="src\Systems\BulletEmitterSystem.cpp" />
     <ClCompile Include="src\Systems\BulletSystem.cpp" />
     <ClCompile Include="src\Systems\PlayerMovementSystem.cpp" />
@@ -166,11 +168,13 @@
     <ClInclude Include="src\include\Components\Components.hpp" />
     <ClInclude Include="src\include\Game.hpp" />
     <ClInclude Include="src\include\Menus\BulletEditor.hpp" />
+    <ClInclude Include="src\include\Menus\BulletSpriteSheetEditor.hpp" />
     <ClInclude Include="src\include\Menus\EditorBase.hpp" />
     <ClInclude Include="src\include\Menus\EditorHandler.hpp" />
     <ClInclude Include="src\include\Menus\EmitterEditor.hpp" />
     <ClInclude Include="src\include\Menus\EntityEditor.hpp" />
     <ClInclude Include="src\include\Menus\ViewportEditor.hpp" />
+    <ClInclude Include="src\include\ResourceManager.hpp" />
     <ClInclude Include="src\include\Systems\BulletEmitterSystem.hpp" />
     <ClInclude Include="src\include\Systems\BulletSystem.hpp" />
     <ClInclude Include="src\include\Systems\PlayerMovementSystem.hpp" />
